derive/test_data/fail_self.stderr
error: 'self' in function signature not allowed here
 --> test_data/fail_self.rs:4:1
  |
4 | #[handler]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> test_data/fail_self.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `$DIR/test_data/fail_self.rs`
